# lab-08-http-client

./: CMakeLists.txt
.github/workflows/: CI.yml
demo/: main.cpp
include/: header.hpp  http_client.hpp  http_client_lib.hpp
include/http_client/: simple_http_client.hpp
include/http_client_lib/: definitions.hpp  simple_http_client.hpp
scripts/: checks.sh
sources/: source.cpp
sources/app/: main.cpp
sources/lib/http_client/: simple_http_client.cpp
tests/: test.cpp
